--- a/index.html
+++ b/index.html
@@ -28,3 +28,24 @@
     <link rel="stylesheet" href="assets/css/academicons.css"/>
 
   </head>
+<body>
+    <div class="wrapper">
+      <header>
+        <h1>Tyler Ransom</h1>
+        <p>Assistant Professor of Economics<br>University of Oklahoma</p>
+        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
+    <h3><p class="view"><a href="https://tyleransom.github.io/">Home</a></p></h3>
+        <h3><p class="view"><a href="https://tyleransom.github.io/research.html">Research</a></p></h3>
+    <h3><p class="view"><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></p></h3>
+        <h3><p class="view"><a href="https://tyleransom.github.io/code.html">Code</a></p></h3>
+        <h3><p class="view"><a href="https://tyleransom.github.io/teaching.html">Teaching</a></p></h3>
+        <h3><p class="view"><a href="https://tyleransom.github.io/personal.html">Personal</a></p></h3>
+    <p class="view"><b>Social</b><br>
+        <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+        <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
+        <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
+        <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+        <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
+        <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+      </header>
