--- a/index.html
+++ b/index.html
@@ -40,49 +40,39 @@ wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
 Hefei, Anhui, PRC</p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently an undergraduate in the <a href="https://statistics.wharton.upenn.edu/">School of Mathematics</a> at USTC, 
-<p>My research interests lie broadly in the span of statistics, optimization and machine learning. 
-More specifically, I have been developing methods appropriate for valid inference with high dimensional and structured data, and understanding the sample efficiency in reinforcement learning. 
-I am also interested in problems arising from the interplay between statistical accuracy and computational properties. </p>
+<p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, 
+<p>My research interests lie broadly in the span of probability, statistics and mathematics. 
+More specifically, I have been interested in high-Dimensional probabilities and statistics, random matrix, probability theory and its applications. </p>
 <p>Here is a current copy of my <a href="documents/resume/Resume_Yuting_Wei.pdf">CV</a>.</p>
 <h2>Openings </h2>
-<p>I am currently looking for <b>students and postdocs</b> interested in high dimensional statistics and machine learning. Please email a CV to apply.</p>
-<h2>News </h2>
 <ul>
-<li><p>I recieved the 2022 NSF CAREER Award. </p>
+<li><p>I </p>
 </li>
 </ul>
 <ul>
-<li><p>I will present a tutorial at ICASSP 2022 on &ldquo;Reinforcement Learning: Fundamentals, Algorithms, and Theory&rdquo;, joint with Yuejie Chi and Yuxin Chen, May 2022. </p>
+<li><p>I will </p>
 </li>
 </ul>
 <ul>
-<li><p>Our paper on <a href="https://arxiv.org/abs/2007.06558">Natural Policy Gradient methods</a> is selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. </p>
+<li><p>TEST </p>
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>Stanford University, Stein's Fellow / Lecturer, 2018 - 2019</p>
+<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
 </li>
 </ul>
 <ul>
-<li><p>University of California, Berkeley: Ph.D. in Statistics, 2013 - 2018</p>
+<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research(BICMR) in Peking University, Feb. 2023 - Jun. 2023 (Expected)</p>
 </li>
 </ul>
 <ul>
-<li><p>Peking University: Bachelor of Science (B.S.) Statistics, 2009 - 2013</p>
-</li>
-</ul>
-<ul>
-<li><p>Peking University: Bachelor of Arts (B.A.) Economics, 2010 - 2013</p>
-</li>
-</ul>
 <h2>Contact </h2>
 <p><a href="https://scholar.google.com/citations?user=fsbXdAYAAAAJ&amp;hl=en">Google Scholar Profile</a></p>
 <p><a href="https://www.linkedin.com/in/yuting-wei-32830a7b">LinkedIn Profile</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-21 13:07:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+rotting but not rotting.
 </div>
 </div>
 </td>
