--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">Bio</a></div>
 <div class="menu-item"><a href="publications.html">Research</a></div>
-<div class="menu-item"><a href="publications-category.html">Research&nbsp;by&nbsp;topic</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="experience.html">Talks</a></div>
-<div class="menu-item"><a href="group.html">Group</a></div>
+<div class="menu-item"><a href="experience.html">Educations</a></div>
 <div class="menu-item"><a href="fun.html">Misc.</a></div>
 </td>
 <td id="layout-content">
