--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <table class="imgtable"><tr><td>
 <img src="images/profile2.jpeg" alt="300" width="250px" />&nbsp;</td>
 <td align="left"><p>Undergraduate <br />
-<a href="https://statistics.wharton.upenn.edu/">School of Mathematics, USTC</a> <br /></p>
+<a href="https://math.ustc.edu.cn/">School of Mathematics, USTC</a> <br /></p>
 <p><br />
 wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
 Hefei, Anhui, PRC</p>
