--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </script>
 <h1>Leda Wang</h1>
 <table class="imgtable"><tr><td>
-<img src="images/profile2.jpeg" alt="300" width="250px" />&nbsp;</td>
+<img src="微信图片_20210817164343.jpg" alt="300" width="250px" />&nbsp;</td>
 <td align="left"><p>Undergraduate <br />
 <a href="https://math.ustc.edu.cn/">School of Mathematics, USTC</a> <br /></p>
 <p><br />
