--- a/fun.html
+++ b/fun.html
@@ -28,11 +28,8 @@
   gtag('config', 'UA-150369356-1');
 </script>
 <h1>Misc.</h1>
-<p>Besides academics, I used to be a semi-professional traditional Chinese dancer. <br />
-I started learning Chinese painting as a kid and I am into western modern art as well.</p>
-<p>My personal favourites: <a href="https://www.fcbarcelona.com/">Barcelona FC</a>, <a href="https://www.youtube.com/watch?v=RZgD7Nn3isw">Johannes Brahms</a>, <a href="https://www.youtube.com/watch?v=ubTJI_UphPk">Van Gogh</a>.</p>
-<div id="footer">
-<div id="footer-text">
+<p>Besides academics, I used to be the conductor of USTC student orchestra. <br /></p>
+<p>My personal favourites: I love Bruckner, Wagner, Shostakovich, Rachmaninoff, etc.</p>
 Page generated 2022-09-21 13:07:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
