--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
 Hefei, Anhui, PRC</p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, 
+<p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, also joint the Loo-Keng Hua Mathematics Honors Program.
 <p>My research interests lie broadly in the span of probability, statistics and mathematics. 
 More specifically, I have been interested in high-Dimensional probabilities and statistics, random matrix, probability theory and its applications. </p>
 <p>Here is a current copy of my <a href="documents/resume/Resume_Yuting_Wei.pdf">CV</a>.</p>
@@ -62,7 +62,7 @@ More specifically, I have been interested in high-Dimensional probabilities and 
 <ul>
 <li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research(BICMR) in Peking University, Feb. 2023 - Jun. 2023 (Expected)</p>
 </li>
-
+</ul>
 <div id="footer">
 <div id="footer-text">
 rotting but not rotting.
