--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@ Hefei, Anhui, PRC</p>
 <p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, also joint the Loo-Keng Hua Mathematics Honors Program.
 <p>My research interests lie broadly in the span of probability, statistics and mathematics. 
 More specifically, I have been interested in high-Dimensional probabilities and statistics, random matrix, probability theory and its applications. </p>
-<p>Here is a current copy of my <a href="documents/resume/Resume_Yuting_Wei.pdf">CV</a>.</p>
-<h2>Openings </h2>
+<p>Here is a current copy of my <a href="documents/resume/good_CV.pdf">CV</a>.</p>
+<h2>News </h2>
 <ul>
-<li><p>I </p>
+<li><p>I received Yuanqing Yang Scholarship, which was usually given to top 8 undergraduates in all. </p>
 </li>
 </ul>
 <ul>
-<li><p>I will </p>
+<li><p>I will go to the Enhanced Mathematics Exchanging Program in Beijing International Center for Mathematical Research. Looking forward to the new atmosphere in Peking University! </p>
 </li>
 </ul>
 <ul>
-<li><p>TEST </p>
+<li><p>I was selected as one of the representatives of the Anhui Province in Chinese Mathematical Competitions for Undergraduates </p>
 </li>
 </ul>
 <h2>Education</h2>
