--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ More specifically, I have been interested in high-Dimensional probabilities and 
 </li>
 </ul>
 <ul>
-<li><p>I was selected as one of the representatives of the Anhui Province in Chinese Mathematical Competitions for Undergraduates </p>
+<li><p>I was selected as one of the representatives of the Anhui Province in Chinese Mathematical Competitions for Undergraduates. </p>
 </li>
 </ul>
 <h2>Education</h2>
