--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ More specifically, I have been interested in high-Dimensional probabilities and 
 <p>Here is a current copy of my <a href="documents/resume/good_CV.pdf">CV</a>.</p>
 <h2>News </h2>
 <ul>
-<li><p>I received Yuanqing Yang Scholarship, which was usually given to top 8 undergraduates in all. </p>
+<li><p>I received Yuanqing Yang Scholarship, which was usually given to top 8 undergraduates in School of Mathematics. </p>
 </li>
 </ul>
 <ul>
