--- a/fun.html
+++ b/fun.html
@@ -30,7 +30,7 @@
 </script>
 <h1>Misc.</h1>
 <p>Besides academics, I used to be the conductor of USTC student orchestra. <br /></p>
-<p>I hope to write a short concise tutorial of the development of amateur conductor before graduation. I sincerely hope all of you can push me in my final year! </p>
+<p>I hope to write a short concise tutorial of the development of amateur conductor before graduation. Simplified Chinese version Here. I sincerely look forward to your suggestions! </p>
 <p>My personal favourites: I love Beethoven, Bruckner, Wagner, Mahler, Shostakovich, Rachmaninoff, etc.</p>
 </div>
 </div>
