--- a/fun.html
+++ b/fun.html
@@ -30,8 +30,7 @@
 </script>
 <h1>Misc.</h1>
 <p>Besides academics, I am currently the president, and used to be the conductor of USTC student orchestra. <br /></p>
-<li><p>I hope to write a short concise tutorial of the development of amateur conductor before graduation. <a href="自编指挥教程.pdf">Simplified Chinese version Here</a> <br />. I sincerely look forward to your suggestions! </p>
-<ul>
+<p>I hope to write a short concise tutorial of the development of amateur conductor before graduation. <a href="自编指挥教程.pdf">Simplified Chinese version Here</a> <br />. I sincerely look forward to your suggestions! </p>
 <p>My personal favourites: I love Beethoven, Bruckner, Wagner, Mahler, Shostakovich, Rachmaninoff, etc.</p>
 </div>
 </div>
