--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">Bio</a></div>
 <div class="menu-item"><a href="publications.html">Research</a></div>
-<div class="menu-item"><a href="experience.html">Educations</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="fun.html">Misc.</a></div>
 </td>
@@ -41,27 +40,14 @@ Hefei, Anhui, PRC</p>
 <p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, also joint the Loo-Keng Hua Mathematics Honors Program.
 <p>My research interests lie broadly in the span of probability, statistics and mathematics. 
 More specifically, I have been interested in high-Dimensional probabilities and statistics, random matrix, probability theory and its applications. </p>
-<p>Here is a current copy of my <a href="documents/resume/good_CV.pdf">CV</a>.</p>
-<h2>News </h2>
-<ul>
-<li><p>I received Yuanqing Yang Scholarship, which was usually given to top 8 undergraduates in School of Mathematics. </p>
-</li>
-</ul>
-<ul>
-<li><p>I will go to the Enhanced Mathematics Exchanging Program in Beijing International Center for Mathematical Research. Looking forward to the new atmosphere in Peking University! </p>
-</li>
-</ul>
-<ul>
-<li><p>I was selected as one of the representatives of the Anhui Province in Chinese Mathematical Competitions for Undergraduates. </p>
-</li>
-</ul>
+<p>Here is a current copy of my <a href="good_CV.pdf">CV</a>.</p>
 <h2>Education</h2>
 <ul>
-<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
+<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. (with distinction) in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
 </li>
 </ul>
 <ul>
-<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research(BICMR) in Peking University, Feb. 2023 - Jun. 2023 (Expected)</p>
+<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research(BICMR) in Peking University, Feb. 2023 - Jun. 2023 </p>
 </li>
 </ul>
 <div id="footer">
