--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Hefei, Anhui, PRC</p>
 </td></tr></table>
 <h2>About Me</h2>
 <p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, also joint the Loo-Keng Hua Mathematics Honors Program.
-<p>My research interests lie broadly in the span of probability, statistics and mathematics. 
-More specifically, I have been interested in high-Dimensional probabilities and statistics, random matrix, probability theory and its applications. </p>
+<p>My research interests lie broadly in the span of theoretical statistics and (applied) mathematics. 
+I have been interested in high-dimensional probabilities and statistics, random matrix and its applications, etc. </p>
 <p>Here is a current copy of my <a href="good_CV.pdf">CV</a>.</p>
 <h2>Education</h2>
 <ul>
