--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@ I have been interested in high-dimensional probabilities and statistics, random 
 </ul>
 <div id="footer">
 <div id="footer-text">
-rotting but not rotting.
+Page generated 2024-2-14, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
 </tr>
 </table>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+</body>
+</html>
