--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
 <h1>Publications</h1>
 <h2>Working Papers</h2>
 <ul>
-<li><p>Inference in Randomized Least Squares and PCA via Normality of Quadratic Forms.</p>
+<li><p><a href="https://arxiv.org/abs/2404.00912">Inference in Randomized Least Squares and PCA via Normality of Quadratic Forms.</a> <br /></p>
 <ul>
 <li><p>Leda Wang, Zhixiang Zhang, and Edgar Dobriban</p>
 </li>
