--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <a href="https://math.ustc.edu.cn/">School of Mathematics, USTC</a> <br /></p>
 <p><br />
 wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
-Hefei, Anhui, PRC</p>
+Hefei, Anhui</p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently an undergraduate in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, also joint the Loo-Keng Hua Mathematics Honors Program.
+<p>I am currently a senior in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, and an incoming Ph.D. student in the Department of Statistics and Data Science, Yale University.
 <p>My research interests lie broadly in the span of theoretical statistics and (applied) mathematics. 
 I have been interested in high-dimensional probabilities and statistics, random matrix and its applications, etc. </p>
 <p>Here is a current copy of my <a href="good_CV.pdf">CV</a>.</p>
