--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
 Hefei, Anhui</p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently a senior in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a> at USTC, and an incoming Ph.D. student in the Department of Statistics and Data Science, Yale University.
+<p>I am currently a senior in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a>, USTC, and an incoming Ph.D. student in the <a href="https://statistics.yale.edu/">Department of Statistics and Data Science</a>, Yale University.
 <p>My research interests lie broadly in the span of theoretical statistics and (applied) mathematics. 
 I have been interested in high-dimensional probabilities and statistics, random matrix and its applications, etc. </p>
 <p>Here is a current copy of my <a href="good_CV.pdf">CV</a>.</p>
