--- a/fun.html
+++ b/fun.html
@@ -30,7 +30,7 @@
 <h1>Misc.</h1>
 <p>Besides academics, I am currently the president, and used to be the conductor of USTC student orchestra. <br /></p>
 <p>I hope to write a short concise tutorial of the development of amateur conductor before graduation. <a href="指挥教程.pdf">Simplified Chinese version</a> and <a href="Tutorial_on_Conducting.pdf">English version</a> are available. I sincerely look forward to your suggestions! </p>
-<p>My personal favourites: I love Beethoven, Bruckner, Wagner, Mahler, Shostakovich, Rachmaninoff, etc.</p>
+<p>My personal favourites: I love Beethoven, Bruckner, Wagner, Shostakovich, Rachmaninoff, etc.</p>
 </div>
 </div>
 </td>
