--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I have been interested in high-dimensional probabilities and statistics, random 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-4-2, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-4-2, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>. Visitors statistics:
 </div>
   <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5e65hdvv496&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;cw=ffffff&amp;cb=000000" async="async"></script>
 </div>
