--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@ Hefei, Anhui</p>
 <h2>About Me</h2>
 <p>I am currently a senior in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a>, USTC, and an incoming Ph.D. student in the <a href="https://statistics.yale.edu/">Department of Statistics and Data Science</a>, Yale University.
 <p>My research interests lie broadly in the span of theoretical statistics and (applied) mathematics. 
-I have been interested in high-dimensional probabilities and statistics, random matrix and its applications, etc. </p>
-<p>Here is a current copy of my <a href="good_CV.pdf">CV</a>.</p>
+I have been interested in high-dimensional probabilities and statistics, random matrix theory and applications, etc. </p>
 <h2>Education</h2>
 <ul>
-<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. (with distinction) in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
+<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. with summa cum laude in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
 </li>
 </ul>
 <ul>
-<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research(BICMR) in Peking University, Feb. 2023 - Jun. 2023 </p>
+<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research (BICMR) in Peking University, Feb. 2023 - Jun. 2023 </p>
 </li>
 </ul>
 <div id="footer">
