--- a/index.html
+++ b/index.html
@@ -28,33 +28,15 @@
   gtag('config', 'UA-150369356-1');
 </script>
 <h1>Leda Wang</h1>
-<table class="imgtable"><tr><td>
-<img src="fig.png" alt="300px" width="250px" />&nbsp;</td>
-<td align="left"><p>Undergraduate <br />
-<a href="https://math.ustc.edu.cn/">School of Mathematics, USTC</a> <br /></p>
+<table class="imgtable"><tr>
+<td align="left"><p>Postgraduate <br />
+<a href="https://statistics.yale.edu/">Department of Statistics and Data Science, Yale University</a> <br /></p>
 <p><br />
-wangleda (at) mail (dot) ustc (dot) edu (dot) cn <br />
-Hefei, Anhui</p>
+leda (dot) wang (at) yale (dot) edu <br /></p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently a senior in the <a href="https://math.ustc.edu.cn/">School of Mathematics</a>, USTC, and an incoming Ph.D. student in the <a href="https://statistics.yale.edu/">Department of Statistics and Data Science</a>, Yale University.
-<p>My research interests lie broadly in the span of theoretical statistics and (applied) mathematics. 
-I have been interested in high-dimensional probabilities and statistics, random matrix theory and applications, etc. </p>
-<h2>Education</h2>
-<ul>
-<li><p>Department of Probability and Statistics, School of Mathematical Sciences, University of Science and Technology of China (USTC), B.S. with summa cum laude in Mathematics and Applied Mathematics, Sept. 2020 - Jul. 2024 (Expected)</p>
-</li>
-</ul>
-<ul>
-<li><p>Enhanced Program for Graduate Study, Beijing International Center for Mathematical Research (BICMR) in Peking University, Feb. 2023 - Jun. 2023 </p>
-</li>
-</ul>
-<div id="footer">
-<div id="footer-text">
-Page generated 2024-4-2, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>. Visitors statistics:
-</div>
-  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5e65hdvv496&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;cw=ffffff&amp;cb=000000" async="async"></script>
-</div>
+<p>Was born, tries to learn some math and statistics, will die.
+</p>
 </td>
 </tr>
 </table>
